--- a/.gitignore
+++ b/.gitignore
@@ -88,4 +88,4 @@ atlassian-ide-plugin.xml
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
-crashlytics-build.properties
+crashlytics-build.propertieslongestPalindrome.java
